<resources>
    <string name="app_name">BangkitEvent</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="information_header">Informasi:</string>
    <string name="visit_website">Visit Website</string>

    <string name="searchbar_hint">Cari event!</string>
    <string name="dicoding_event">Dicoding Event</string>
    <string name="finished_events">Finished Events</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="placeholder_image">placeholder_image</string>
    <string name="fetch_data">Fetching data…</string>
    <string name="sisa_kuota">Sisa Kuota:</string>
    <string name="fetching_data">Fetching data…</string>
    <string name="these_might_interest_you">These might interest you</string>
    <string name="recommended_event_for_you">Recommended event for you</string>
    <string name="title_placeholder">Title</string>
    <string name="penyelenggara_acara">Penyelenggara Acara</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_favorite">Favorite</string>
    <string name="here_s_your_favorite_events">Here\'s your favorite Events</string>
    <!-- Preference Titles -->
    <string name="messages_header">Copyright</string>
    <string name="modifier_header">Modifier</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Signature</string>
    <string name="rate_title">Rate this apps</string>

    <!-- Sync Preferences -->
    <string name="dark_title">Dark Mode</string>
    <string name="dark_off">Enable Dark Mode</string>
    <string name="dark_on">Disable Dark Mode</string>
    <string name="reminder_title">Daily Reminder</string>
    <string name="reminder_on">Disable daily notification
    </string>
    <string name="reminder_off">Enable daily notification</string>
    <string name="header_settingsfragment">SettingsFragment</string>
    <string name="title_settings">Settings</string>
    <string name="event">You don\'t have any favorite Events</string>
    <string name="button">button</string>
</resources>