<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">
    <PreferenceCategory
        app:title="@string/messages_header"
        app:iconSpaceReserved="false">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"
            app:defaultValue="Rifa Indra Setiawan"/>

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/modifier_header"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="theme"
            app:title="@string/dark_title"
            app:defaultValue="true"
            app:summaryOff="@string/dark_off"
            app:summaryOn="@string/dark_on"
            app:iconSpaceReserved="false"/>

        <SwitchPreferenceCompat
            app:key="reminder"
            app:iconSpaceReserved="false"
            app:summaryOff="@string/reminder_off"
            app:summaryOn="@string/reminder_on"
            app:title="@string/reminder_title" />

    </PreferenceCategory>

</PreferenceScreen>