<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.detail.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/fetch_data"/>

        <TextView
            android:id="@+id/detail_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textAlignment="center"
            android:text=""/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/sisa_kuota"/>

            <TextView
                android:id="@+id/detail_kuota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text=""/>

            <TextView
                android:id="@+id/detail_beginTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text=""/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textAlignment="center"
            android:text="@string/penyelenggara_acara"/>

        <TextView
            android:id="@+id/detail_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/information_header"/>

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:text="" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/detail_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visit_website"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="@dimen/text_margin"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="?attr/colorOnPrimary"
            android:iconTint="?attr/colorOnPrimary"
            app:cornerRadius="50dp"
            android:elevation="6dp"
            android:padding="16dp" />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>